# TinyDB

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
include/: student.h  utils.h
src/: library.c  library.h  main.c  refrence.txt  stud_info.txt  student.c  student_app  utils.c
